# PromptLoom

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  PROCEDURE.md  compose.yaml  darijat_sample_text.txt  generate_darijat_sample.py  readme.md
.claude/: launch.json
apps/tts-server/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
apps/tts-server/src/tts_server/: __init__.py  cache.py  config.py  engine.py  jobs.py  main.py  schemas.py
apps/tts-server/tests/: test_api.py  test_cache.py  test_engine.py  test_jobs.py
apps/video-api/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
apps/video-api/docs/: README.md  advanced-production.md  api-reference.md  architecture.md  developer-guide.md  llm-contract.md  manim-generation-guidelines.md  manim-skill.md  operations.md  quickstart.md  remotion-catalog.md  remotion-engine.md  remotion-skill.md
apps/video-api/docs/superpowers/specs/: 2026-06-21-subtitles-overhaul-design.md
apps/video-api/remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
apps/video-api/remotion/src/: MainComposition.tsx  Root.tsx  lib.ts  registry.ts
apps/video-api/remotion/src/catalog/: AmbientBackground.tsx  BarChart.tsx  CodeBlock.tsx  Counter.tsx  FlowToken.tsx  Icon.tsx  MathFormula.tsx  MemoryGrid.tsx  NarrationCaptions.tsx  Plot.tsx  text.tsx
apps/video-api/remotion/src/components/: primitives.tsx
apps/video-api/remotion/src/style/: anim.ts  tokens.ts
apps/video-api/src/video_api/: __init__.py  capabilities.py  celery_app.py  config.py  db.py  event_bus.py  languages.py  logging_setup.py  main.py  models.py  schemas.py  storage.py  tasks.py  timing.py  voices.py  webhooks.py
apps/video-api/src/video_api/pipeline/: __init__.py  align.py  assets.py  beats.py  captions.py  commands.py  editorial.py  engine.py  llm.py  materialize.py  production.py  remotion_blueprint.py  remotion_materialize.py  remotion_scene_coder.py  research.py  scene_coder.py  substep.py  validate.py  verify.py  visual_review.py  voice.py
apps/video-api/tests/: conftest.py  test_align.py  test_api.py  test_attempt_tracking.py  test_batch.py  test_beats.py  test_capabilities.py  test_captions.py  test_commands.py  test_config.py  test_db.py  test_editorial_pipeline.py  test_event_bus.py  test_llm_coercion.py  test_llm_thinking.py  test_materialize.py  test_materialize_sync.py  test_moss_remote_client.py  test_moss_voice_consistency.py  test_pipeline_flow.py  test_remotion_engine.py  test_remotion_two_pass.py  test_retention.py  test_scene_coder.py  test_scene_level_repair.py  test_scene_runtime_validation.py  test_schemas.py  test_substep.py  test_validate_ast.py  test_verify.py  test_visual_review.py  test_voice_cache.py  test_voice_engine.py  test_voices.py
apps/video-api/voice-bank/: README.md
(+92 files in other folders)
