[project]
name = "moss-tts-server"
version = "0.1.0"
description = "GPU microservice serving OpenMOSS-Team/MOSS-TTS-v1.5 over HTTP for the Kernel Videos pipeline."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
# The heavy ML stack lives behind an extra so tests (fake engine) and tooling
# never pull torch. The Docker image installs `--extra gpu`.
gpu = [
  "torch>=2.2",
  "torchaudio>=2.2",
  # torchaudio >= 2.9 delegates load/save to torchcodec, and the model's own
  # remote code (processing_moss_tts.py) calls torchaudio.load on the voice
  # reference. torchcodec uses the ffmpeg libs already in the image.
  "torchcodec>=0.4",
  "transformers>=4.46",
  "accelerate>=0.33",
  "huggingface-hub>=0.26",
  "safetensors>=0.4",
  "numpy>=1.26",
  "soundfile>=0.12",
]
test = [
  "pytest>=8.3,<9",
  "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
